objects/pymt__Sites_Website_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PaymentConnect settings for each Sites website.</description>
    <fields>
        <fullName>pymt__Allow_Express_Checkout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables express checkout options, when supported by the processor on payment pages in various PaymentConnect add-ons.</description>
        <inlineHelpText>Enables express checkout options, when supported by the processor on payment pages in various PaymentConnect add-ons.</inlineHelpText>
        <label>Allow Express Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Alternate_Processor_Connection__c</fullName>
        <description>(Optional) Used by add-on and payment landing pages to offer an alternate checkout option (e.g. ACHWorks)</description>
        <inlineHelpText>(Optional) Used by add-on and payment landing pages to offer an alternate checkout option (e.g. ACHWorks)</inlineHelpText>
        <label>Alternate Processor Connection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Bank_Account_Management__c</fullName>
        <description>Type of bank account payment methods to use on the site.  None, Native, or Tokenized</description>
        <inlineHelpText>Type of bank acocunt payment methods to use on the site.</inlineHelpText>
        <label>Bank Account Management</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Cancel_Subscription_URL__c</fullName>
        <description>Custom URL to redirect customers to for cancelling a subscription. Must accept the payment profile record id parm (ppid)</description>
        <inlineHelpText>Custom URL to redirect customers to for cancelling a subscription.</inlineHelpText>
        <label>Cancel Subscription URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pymt__Card_Management__c</fullName>
        <description>Type of credit card payment methods to use on the site.  None, Native, or Tokenized</description>
        <inlineHelpText>Type of credit card payment methods to use on the site.</inlineHelpText>
        <label>Card Management</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Currency_Format__c</fullName>
        <defaultValue>&quot;$x.xx ISO&quot;</defaultValue>
        <description>Preferred layout for currency symbol, amount, and ISO code. $x.xx ISO, x.xx ISO, or $x.xx</description>
        <inlineHelpText>Preferred layout for currency symbol, amount, and ISO code.</inlineHelpText>
        <label>Currency Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabled extended error message and other Sites page debug features.</description>
        <inlineHelpText>Enabled extended error message and other Sites page debug features.</inlineHelpText>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Default_ACH_Processor__c</fullName>
        <description>Not currently used.</description>
        <inlineHelpText>Not currently used.</inlineHelpText>
        <label>Deprecated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Portal_Account_Id__c</fullName>
        <description>Default account Id to use when registering portal users with the SiteRegister page included with PaymentConnect. You need to add the account owner into the role hierarchy for registrations to work. See Customer Portal Setup help for more information</description>
        <inlineHelpText>Default account Id to use when registering portal users with the SiteRegister page included with PaymentConnect. You need to add the account owner into the role hierarchy for registrations to work. See Customer Portal Setup help for more information</inlineHelpText>
        <label>Default Portal Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Portal_User_Type__c</fullName>
        <description>Determines which type of portal user the registration page tries to create. Your Salesforce configuration and Sites settings must support the option you select here.</description>
        <inlineHelpText>Determines which type of portal user the registration page tries to create. Your Salesforce configuration and Sites settings must support the option you select here.</inlineHelpText>
        <label>Default Portal User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Processor_Connection__c</fullName>
        <description>Default processor connection to use with this Site.</description>
        <inlineHelpText>Default processor connection to use with this Site.</inlineHelpText>
        <label>Default Processor Connection</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Display_CSS_Buttons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables CSS-Styled buttons on managed pages (instead of standard html buttons)</description>
        <inlineHelpText>Enables CSS-Styled buttons on managed pages (instead of standard html buttons)</inlineHelpText>
        <label>Display CSS Buttons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Enable_Payment_Methods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Keep_Active_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the ability to remove the last active payment method on an account.</description>
        <inlineHelpText>Disables the ability to remove the last active payment method on an account.</inlineHelpText>
        <label>Keep Active Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Native_Card_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Deprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Native_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets the default recurring payment checkout to native recurring.</description>
        <inlineHelpText>Sets the default recurring payment checkout to native recurring.</inlineHelpText>
        <label>Native Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Pay_Scheduled_Payment_URL__c</fullName>
        <description>Custom URL to redirect customers to process a scheduled payment. Must accept the payment record id parm (pid)</description>
        <inlineHelpText>Custom URL to redirect customers to process a scheduled payment. Must accept the payment record id parm (pid)</inlineHelpText>
        <label>Pay Scheduled Payment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pymt__Payment_Method_Model__c</fullName>
        <defaultValue>&quot;Single&quot;</defaultValue>
        <description>Single or Multiple payment methods for this site.</description>
        <inlineHelpText>Single or Multiple payment methods for this site.</inlineHelpText>
        <label>Payment Method Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Update_Subscription_URL__c</fullName>
        <description>Custom URL to redirect customers to for cancelling a subscription. Must accept the payment profile record id parm (ppid)</description>
        <inlineHelpText>Custom URL to redirect customers to for cancelling a subscription.</inlineHelpText>
        <label>Update Subscription URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pymt__Verify_Access_Keys__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, instructs public checkout pages to verify the payment or profile access key before displaying transaction details.</description>
        <inlineHelpText>If checked, instructs public checkout pages to verify the payment or profile access key before displaying transaction details.</inlineHelpText>
        <label>Verify Access Keys</label>
        <type>Checkbox</type>
    </fields>
    <label>Sites Website Settings</label>
</CustomObject>